--- a/style.css
+++ b/style.css
@@ -35,6 +35,17 @@ p{
 .section-m1{
     margin: 40px 0;
 }
+button.white{
+    font-size: 13px;
+    font-weight: 600;
+    padding: 11px 18px;
+    color: #fff;
+    background-color: transparent;
+    cursor: pointer;
+    border: 1px solid #fff;
+    outline: none;
+    transition: 0.5s;
+}
 body{
     width: 100%;
 }
@@ -84,6 +95,13 @@ body{
     position: absolute;
     bottom: -4px;
     left: 20px;
+}
+#mobile{
+    display: none;
+    align-items: none;
+}
+#close{
+    display: none;
 }
  /*Home Page*/
  #hero{
@@ -195,4 +213,191 @@ background-color: #78d8d279;
 position: absolute;
 bottom: 20px;
 right: 10px;
+}
+/*Banner*/
+#sm-banner{
+    display: flex;
+    justify-content:space-between ;
+    flex-wrap: wrap;
+}
+
+#sm-banner .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    
+    background-image: url("./img/soldadura-automatizada-VLD-1024x679.png");
+    min-width: 45%;
+    height: 50vh ;
+    background-size: cover;
+    background-position: center;
+    padding: 10px;
+}
+#sm-banner .banner-box2{
+    background-image: url("./img/diseno-industrial-artesania-made-in-spain-ecophonic-b2-855x500.jpeg");
+}
+#sm-banner h4{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+}
+#sm-banner h2{
+    color: #fff;
+    font-size: 28px;
+    font-weight: 800;
+}
+#sm-banner span{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    padding-bottom: 15px;
+}
+#sm-banner .banner-box:hover button{
+    
+    background: #ff3636;
+    border: 1px solid #fff;
+}
+#banner3{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+#banner3 .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;   
+    min-width:30%;
+    height: 30vh ;
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+#banner3 .b1{
+    background-image: url("https://pbs.twimg.com/media/CGMpvIYWEAASsVq.jpg");
+}
+#banner3 .b2{
+    background-image: url("./img/banner_gamma.jpg");
+}
+#banner3 .b3{
+    background-image: url("./img/banner_hamilton.webp");
+}
+footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+footer .col{
+    width: 21%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 20px;
+}
+footer .logo{
+    margin-bottom: 30px;
+}
+footer h4{
+    font-size: 14px;
+    padding-bottom: 5px;
+}
+footer p{
+    font-size: 13px;
+    margin: 0 0 8px 0;
+
+}
+footer a{
+    font-size: 13px;
+    text-decoration: none;
+    color: #222;
+    margin-bottom: 10px;
+    
+}
+footer .follow{
+    margin-top: 20px;
+
+}
+.icon a{
+    text-decoration: none;
+    color: #465b52;
+}
+footer .follow svg{
+    fill: #465b52;
+    padding-right: 6px;
+    cursor: pointer;
+    
+}
+footer .install img{
+    width: 100%;
+    margin: 10px 0 15px 0;
+}
+.copyright{
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+
+}
+
+
+@media (max-width:799px) {
+    #navbar{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: #e3e6f3;
+        box-shadow: 0 40px 60px rgba(0,0,0,0.1);
+        padding: 80px 0 0 10px;
+        transition: 0.5s;
+    }
+    #navbar.active{
+        right: 0px;
+    }
+    #navbar li{
+        margin-bottom: 25px;
+    }
+    #mobile{
+        display: flex;
+        align-items: none;
+    }
+    #mobile svg{
+        fill: #1a1a1a;
+        padding-left: 20px;
+
+    }
+    #close{
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: #222;
+    }
+    #hero{
+        height: 90vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    }
+    #product1 .pro-container{
+        justify-content: center;
+    }
+    #product1 .pro{
+        margin: 5px;
+    }
+    #sm-banner .banner-box{
+        min-width: 100%;
+        height: 45vh;
+    }
+    #banner3{
+        padding: 0 40px;
+    }
+    #banner3 .banner-box{
+        width: 28%;
+    }
 }
